--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
         </div>
       </div>
       <div class="footer-bottom">
-        <p>&copy; 2025 Linear City. All rights reserved.</p>
+        <p>&copy; 2025 Linear City. All rights reserved to alx professional foundations "kyan team".</p>
       </div>
     </div>
   </footer>
