--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <li><a href="#about">About</a></li>
         <li><a href="#features">Features</a></li>
         <li><a href="#benefits">Benefits</a></li>
+        <li><a href="#services">Services</a></li>
         <li><a href="#gallery">Gallery</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
@@ -46,6 +47,29 @@
         </div>
         <div class="about-image">
           <img src="https://i.guim.co.uk/img/media/010bfa1cccfada89d0b3bdb2afe6648934b24cf9/0_0_2500_3333/master/2500.jpg?width=1140&dpr=1&s=none&crop=none" alt="Linear City Concept">
+        </div>
+      </div>
+    </div>
+  </section>
+  
+  <section id="audience" class="audience">
+    <div class="container">
+      <h2>Who We Serve</h2>
+      <div class="audience-boxes">
+        <div class="audience-box">
+          <i class="fas fa-users"></i>
+          <h3>Urban Residents</h3>
+          <p>For those seeking a better quality of life with shorter commutes, better access to green spaces, and more efficient public services, linear cities offer a sustainable living environment designed around human needs.</p>
+        </div>
+        <div class="audience-box">
+          <i class="fas fa-briefcase"></i>
+          <h3>Investors & Developers</h3>
+          <p>We provide detailed analyses, planning resources, and connection opportunities for forward-thinking investors looking to participate in the future of urban development with significant potential returns.</p>
+        </div>
+        <div class="audience-box">
+          <i class="fas fa-landmark"></i>
+          <h3>Municipal Planners</h3>
+          <p>City planners and government officials can access our resources to implement linear city principles in existing urban areas or plan new developments that maximize efficiency and sustainability.</p>
         </div>
       </div>
     </div>
@@ -75,6 +99,67 @@
           <h3>Sustainable Energy</h3>
           <p>Renewable energy sources power the city, with infrastructure designed for maximum energy efficiency.</p>
         </div>
+        <div class="feature-card">
+          <i class="fas fa-arrows-alt-v"></i>
+          <h3>Vertical Expansion</h3>
+          <p>Urban growth is focused upward with high-density, multi-purpose structures that maximize space while minimizing footprint.</p>
+        </div>
+        <div class="feature-card">
+          <i class="fas fa-shield-alt"></i>
+          <h3>Earthquake Resistance</h3>
+          <p>Advanced architectural designs and foundation systems ensure safety and stability in seismic events.</p>
+        </div>
+        <div class="feature-card">
+          <i class="fas fa-recycle"></i>
+          <h3>Circular Economy Systems</h3>
+          <p>Integrated waste management and recycling infrastructure that converts waste into resources, reducing landfill usage and creating a sustainable closed-loop system.</p>
+        </div>
+        <div class="feature-card">
+          <i class="fas fa-clinic-medical"></i>
+          <h3>Distributed Healthcare</h3>
+          <p>Evenly spaced medical facilities throughout the linear structure ensure that all residents have quick access to healthcare within minutes of their homes.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+  
+  <section id="technology" class="technology">
+    <div class="container">
+      <h2>AI-Powered Urban Solutions</h2>
+      <div class="tech-container">
+        <div class="tech-image">
+          <img src="https://images.unsplash.com/photo-1617791160536-598cf32026fb?ixlib=rb-1.2.1&auto=format&fit=crop&w=1000&q=80" alt="AI Urban Solutions">
+        </div>
+        <div class="tech-details">
+          <div class="tech-item">
+            <i class="fas fa-smog"></i>
+            <div>
+              <h3>Real-time Pollution Monitoring</h3>
+              <p>Our AI systems continuously analyze air quality throughout the city, automatically adjusting ventilation systems and alerting residents when necessary.</p>
+            </div>
+          </div>
+          <div class="tech-item">
+            <i class="fas fa-traffic-light"></i>
+            <div>
+              <h3>Intelligent Traffic Management</h3>
+              <p>AI algorithms optimize traffic flow in real-time, reducing congestion and commute times while minimizing emissions.</p>
+            </div>
+          </div>
+          <div class="tech-item">
+            <i class="fas fa-water"></i>
+            <div>
+              <h3>Resource Distribution Optimization</h3>
+              <p>Machine learning systems manage water, electricity, and waste management with unprecedented efficiency, reducing costs and environmental impact.</p>
+            </div>
+          </div>
+          <div class="tech-item">
+            <i class="fas fa-hard-hat"></i>
+            <div>
+              <h3>Predictive Maintenance</h3>
+              <p>AI predicts infrastructure maintenance needs before failures occur, ensuring continuous service and extending system lifespans.</p>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </section>
@@ -91,9 +176,56 @@
           <li><i class="fas fa-check-circle"></i> Improved accessibility to services and amenities</li>
           <li><i class="fas fa-check-circle"></i> Preservation of natural landscapes around the city</li>
           <li><i class="fas fa-check-circle"></i> Greater community connectivity</li>
+          <li><i class="fas fa-check-circle"></i> Vertical urban expansion for space optimization</li>
+          <li><i class="fas fa-check-circle"></i> Earthquake-resistant foundations for increased safety</li>
+          <li><i class="fas fa-check-circle"></i> AI-enabled pollution monitoring and management</li>
         </ul>
         <div class="benefits-image">
           <img src="https://www.treehugger.com/thmb/JOISHeUdln0QzW1JRM8lKj2ZvYg=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/looking-down-THE-LINE-43c10f500775486bbcdcfbc49c29cf3a.jpg" alt="Linear City Benefits">
+        </div>
+      </div>
+    </div>
+  </section>
+  
+  <section id="services" class="services">
+    <div class="container">
+      <h2>Our Services</h2>
+      <div class="service-cards">
+        <div class="service-card">
+          <i class="fas fa-city"></i>
+          <h3>Urban Planning Consultation</h3>
+          <p>Our experts provide comprehensive planning services for municipalities and developers looking to implement linear city concepts.</p>
+          <a href="#contact" class="service-btn">Learn More</a>
+        </div>
+        <div class="service-card">
+          <i class="fas fa-chart-line"></i>
+          <h3>Investment Opportunities</h3>
+          <p>Connect with potential investors or explore investment options in pioneering linear city developments around the world.</p>
+          <a href="#contact" class="service-btn">Explore Options</a>
+        </div>
+        <div class="service-card">
+          <i class="fas fa-home"></i>
+          <h3>Residential Solutions</h3>
+          <p>Discover modern, sustainable living options in existing and planned linear city developments with our network of partners.</p>
+          <a href="#contact" class="service-btn">Find Homes</a>
+        </div>
+        <div class="service-card">
+          <i class="fas fa-robot"></i>
+          <h3>AI-Powered Urban Management</h3>
+          <p>Implement cutting-edge AI solutions for traffic optimization, pollution monitoring, and smart infrastructure management.</p>
+          <a href="#contact" class="service-btn">Smart Solutions</a>
+        </div>
+        <div class="service-card">
+          <i class="fas fa-seedling"></i>
+          <h3>Sustainability Assessment</h3>
+          <p>Get comprehensive analysis of your current urban development against linear city sustainability metrics with customized improvement recommendations.</p>
+          <a href="#contact" class="service-btn">Get Assessment</a>
+        </div>
+        <div class="service-card">
+          <i class="fas fa-cubes"></i>
+          <h3>Digital Twin Modeling</h3>
+          <p>Our advanced 3D modeling creates complete digital replicas of linear cities, allowing for real-time monitoring, simulation, and optimization of urban systems.</p>
+          <a href="#contact" class="service-btn">Request Demo</a>
         </div>
       </div>
     </div>
@@ -184,8 +316,11 @@
           <ul>
             <li><a href="#home">Home</a></li>
             <li><a href="#about">About</a></li>
+            <li><a href="#audience">Who We Serve</a></li>
             <li><a href="#features">Features</a></li>
+            <li><a href="#technology">AI Solutions</a></li>
             <li><a href="#benefits">Benefits</a></li>
+            <li><a href="#services">Services</a></li>
             <li><a href="#gallery">Gallery</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
@@ -199,7 +334,7 @@
         </div>
       </div>
       <div class="footer-bottom">
-        <p>&copy; 2025 Linear City. All rights reserved to alx professional foundations "kyan team".</p>
+        <p>&copy; 2025 Linear City. All rights reserved to alx Professional Foundations "kyan team".</p>
       </div>
     </div>
   </footer>
