--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <header>
     <nav>
       <div class="logo">
-        <h1>Linear City</h1>
+        <h1>Kyan Linear Horizons</h1>
       </div>
       <div class="toggle-menu">
         <i class="fas fa-bars"></i>
