--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
     <div class="container">
       <div class="footer-content">
         <div class="footer-logo">
-          <h3>Linear City</h3>
+          <h3>Kyan Linear Horizons</h3>
           <p>Building a sustainable future, one line at a time</p>
         </div>
         <div class="footer-links">
